--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1367,10 +1367,15 @@ body.page-id-52 #whole-comment-area #inner-comment-area p,
 body.page-id-298 #whole-comment-area .comment_content,
 #whole-comment-area section p:last-child,
 body.page-id-298 #whole-comment-area .comment_content strong:nth-child(1) {
-	font-size: 25px !important;
+	font-size: 30px !important;
 	padding: 0px 30px;
 	line-height: 44px !important;
 	font-family: 'NeutraText-LightItalic';
+}
+
+#text-17 {
+	padding-top: 17px;
+	padding-bottom: 5px;
 }
 
 #whole-comment-area section p:last-child,
@@ -2475,7 +2480,7 @@ body.page-id-300 #accordion {
 }
 
 #inner-destination-right-area section .front_destinations_list ul li a.title {
-	font-size: 21px;
+	font-size: 24px;
 }
 
 #inner-destination-right-area section .front_destinations_list .view_all_destination a {
